--- a/src/templates/registro/registro_list.html
+++ b/src/templates/registro/registro_list.html
@@ -23,6 +23,7 @@
 			<td>{{ registro.cantidad_registro }}</td>
 			<td>{{ registro.fecha_registro }}</td>
 				<a class="btn btn-primary" href=""></a>
+				
 			
 			
 		</tr>
@@ -32,5 +33,8 @@
 		{% endif %}
 	</tbody>
 </table>
-
+<form method="post">
+<a href="pdf">Generar pdf</a>
+{% csrf_token %}
+</form>
 {% endblock %}
